인덱스페이지 시작애니메이션 수정

--- a/index.html
+++ b/index.html
@@ -3,292 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/src/images/favicon.ico" />
-    <title>동국대학교 산학교육센터</title>
+    <meta
+      http-equiv="refresh"
+      content="0;url=https://chaewonsung.github.io/dongguk-clone/pages/index.html"
+    />
   </head>
-  <body>
-    <div class="container">
-      <div class="header-include"></div>
-      <main class="green">
-        <section class="greeting">
-          <div class="greeting-bg-text">
-            <div class="text-wrap">
-              <span class="match-bg"
-                >Leaders in Industry-university Cooperation&nbsp;</span
-              ><span class="match-bg"
-                >Leaders in Industry-university Cooperation&nbsp;</span
-              >
-            </div>
-            <div class="text-wrap">
-              <span>Leaders in Industry-university Cooperation&nbsp;</span
-              ><span>Leaders in Industry-university Cooperation&nbsp;</span>
-            </div>
-            <div class="text-wrap">
-              <span class="match-bg"
-                >Leaders in Industry-university Cooperation&nbsp;</span
-              ><span class="match-bg"
-                >Leaders in Industry-university Cooperation&nbsp;</span
-              >
-            </div>
-          </div>
-          <div class="greeting-inner">
-            <div class="greeting-emoji greeting-bg-icon">
-              <i class="rotate-v2"></i><i class="rotate-v1"></i
-              ><i class="rotate-v3"></i><i class="rotate-v2"></i
-              ><i class="rotate-v3"></i><i class="rotate-v1"></i
-              ><i class="rotate-v2"></i>
-            </div>
-            <div class="greeting-center">
-              <img class="img-01" src="/src/images/deco_linc01.png" alt="" />
-              <img class="img-02" src="/src/images/deco_linc02.png" alt="" />
-              <img class="img-03" src="/src/images/deco_linc03.png" alt="" />
-            </div>
-          </div>
-        </section>
-        <section class="slogan">
-          <div class="slogan-phrase">
-            <div class="slogan-phrase-inner">
-              <div class="slogan-text-wrap-01">
-                <span class="absolute">
-                  스펙<i class="up">UP!</i
-                  ><i class="icon-arrow-right"></i>취업<i class="go">GO!</i>
-                </span>
-                <span class="static">
-                  스펙<i class="up">UP!</i
-                  ><i class="icon-arrow-right"></i>취업<i class="go">GO!</i>
-                </span>
-              </div>
-              <div class="slogan-text-wrap-02">
-                <span class="absolute">슬기로운 대학생활</span>
-                <span class="static">슬기로운 대학생활</span>
-              </div>
-            </div>
-            <div class="slogan-phrase-bg"></div>
-          </div>
-          <div class="slogan-phrase">
-            <div class="slogan-phrase-inner">
-              <div class="slogan-text-wrap-03">
-                <span class="absolute"><i class="icon-star"></i>함께해요,</span>
-                <span class="stroke static"
-                  ><i class="icon-star"></i>함께해요,</span
-                >
-              </div>
-              <div class="slogan-text-wrap-04">
-                <span class="absolute">
-                  산학교육센터<span class="linc match-bg">LINC 3.0</span>
-                </span>
-                <span class="static"
-                  >산학교육센터<span class="linc match-bg">LINC 3.0</span></span
-                >
-              </div>
-            </div>
-            <div class="slogan-phrase-bg"></div>
-          </div>
-        </section>
-        <section class="program-guide">
-          <div class="program-guide-inner">
-            <span class="program-guide-title"
-              ><i class="match-bg">program </i><i>guide</i></span
-            >
-            <div class="letter-items">
-              <div class="letter-item">
-                <div class="card-header">
-                  <span class="subject">학생</span>
-                  <span class="card-fake-btns">
-                    <i class="bi bi-dash"></i><i class="bi bi-stop"></i
-                    ><i class="bi bi-x"></i>
-                  </span>
-                </div>
-                <div class="letter-content">
-                  <div class="letter-bubble">
-                    <div class="img-wrap">
-                      <img src="/src/images/pic_letter_speech02.png" alt="" />
-                      <span>어떤 내용이<br />적혀 있을까요?</span>
-                    </div>
-                    <div class="img-wrap">
-                      <img src="/src/images/pic_letter_speech01.png" alt="" />
-                      <span class="bubble-text">편지가<br />도착했어요! </span>
-                    </div>
-                  </div>
-                  <div class="letter">
-                    <div class="letter-envelope">
-                      <img
-                        src="/src/images/pic_letter_inner01.png"
-                        alt=""
-                        class="letter-envelope-in-img"
-                      />
-                      <img
-                        class="letter-envelope-outer-img"
-                        src="/src/images/pic_letter01.png"
-                        alt=""
-                      />
-                      <img
-                        class="letter-envelope-close-img"
-                        src="/src/images/pic_letter_close01.png"
-                        alt=""
-                      />
-                    </div>
-                    <div class="letter-paper">
-                      <img
-                        class="letter-paper-bg"
-                        src="/src/images/bg_paper01.jpg"
-                        alt=""
-                      />
-                      <div class="letter-paper-text">
-                        <span>to. 동국대 재학생님</span>
-                        <p>
-                          신학교육센터에서 동국대학교 재학생님께 초청장을
-                          보냈습니다.
-                        </p>
-                        <a href=""
-                          >더 알아보기<i class="bi bi-arrow-right"></i
-                        ></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="letter-item">
-                <div class="card-header">
-                  <span class="recipient">교원</span>
-                  <span class="card-fake-btns">
-                    <i class="bi bi-dash"></i><i class="bi bi-stop"></i
-                    ><i class="bi bi-x"></i>
-                  </span>
-                </div>
-                <div class="letter-content">
-                  <div class="letter-bubble">
-                    <div class="img-wrap">
-                      <img src="/src/images/pic_letter_speech04.png" alt="" />
-                      <span>어떤 내용이<br />적혀 있을까요?</span>
-                    </div>
-                    <div class="img-wrap">
-                      <img src="/src/images/pic_letter_speech03.png" alt="" />
-                      <span class="bubble-text">편지가<br />도착했어요! </span>
-                    </div>
-                  </div>
-                  <div class="letter">
-                    <div class="letter-envelope">
-                      <img
-                        src="/src/images/pic_letter_inner02.png"
-                        alt=""
-                        class="letter-envelope-in-img"
-                      />
-                      <img
-                        class="letter-envelope-outer-img"
-                        src="/src/images/pic_letter02.png"
-                        alt=""
-                      />
-                      <img
-                        class="letter-envelope-close-img"
-                        src="/src/images/pic_letter_close02.png"
-                        alt=""
-                      />
-                    </div>
-                    <div class="letter-paper">
-                      <img
-                        class="letter-paper-bg"
-                        src="/src/images/bg_paper02.jpg"
-                        alt=""
-                      />
-                      <div class="letter-paper-text">
-                        <span>to. 동국대 교원님</span>
-                        <p>
-                          신학교육센터에서 동국대학교 교원님께 초청장을
-                          보냈습니다.
-                        </p>
-                        <a href=""
-                          >더 알아보기<i class="bi bi-arrow-right"></i
-                        ></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="letter-item">
-                <div class="card-header">
-                  <span class="recipient">산업체</span>
-                  <span class="card-fake-btns">
-                    <i class="bi bi-dash"></i><i class="bi bi-stop"></i
-                    ><i class="bi bi-x"></i>
-                  </span>
-                </div>
-                <div class="letter-content">
-                  <div class="letter-bubble">
-                    <div class="img-wrap">
-                      <img src="/src/images/pic_letter_speech06.png" alt="" />
-                      <span>어떤 내용이<br />적혀 있을까요?</span>
-                    </div>
-                    <div class="img-wrap">
-                      <img src="/src/images/pic_letter_speech05.png" alt="" />
-                      <span class="bubble-text">편지가<br />도착했어요! </span>
-                    </div>
-                  </div>
-                  <div class="letter">
-                    <div class="letter-envelope">
-                      <img
-                        class="letter-envelope-in-img"
-                        src="/src/images/pic_letter_inner03.png"
-                        alt=""
-                      />
-                      <img
-                        class="letter-envelope-outer-img"
-                        src="/src/images/pic_letter03.png"
-                        alt=""
-                      />
-                      <img
-                        class="letter-envelope-close-img"
-                        src="/src/images/pic_letter_close03.png"
-                        alt=""
-                      />
-                    </div>
-                    <div class="letter-paper">
-                      <img
-                        class="letter-paper-bg"
-                        src="/src/images/bg_paper03.jpg"
-                        alt=""
-                      />
-                      <div class="letter-paper-text">
-                        <span>to. 산업체 님</span>
-                        <p>
-                          신학교육센터에서 동국대학교와 함께하고 싶은 산업체에게
-                          초청장을 보냈습니다.
-                        </p>
-                        <a href=""
-                          >더 알아보기<i class="bi bi-arrow-right"></i
-                        ></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="introduction">
-          <div class="introduction-bg-icon">
-            <i class="circle"><i class="match-bg">about linc 3.0</i></i>
-            <i class="top-left"></i>
-            <i class="bottom-left"></i>
-          </div>
-          <div class="introduction-content">
-            <div class="introduction-phrase">
-              '미래산업<i class="icon-clover" style="scale: 0.8"></i>발전에
-              <span>공헌하는 열린대학'</span>
-            </div>
-            <div class="introduction-phrase">
-              '대학-산업체-<span>글로벌'을<i class="icon-earth"></i>잇는</span>
-            </div>
-            <div class="introduction-phrase">
-              동국대학교<span><i class="icon-link"></i>링크사업단</span>
-            </div>
-            <a href="/pages/introduction.html"
-              >소개 바로가기 <i class="bi bi-arrow-right"></i
-            ></a>
-          </div>
-        </section>
-      </main>
-      <div class="footer-include"></div>
-    </div>
-  </body>
+  <body></body>
 </html>
