--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -31,23 +31,23 @@
               </div>
               <ul class="center-list">
                 <li>
-                  <img src="/src/images/pic_center01.png" alt="" />기술사업센터
+                  <img src="../src/images/pic_center01.png" alt="" />기술사업센터
                 </li>
                 <li>
                   <img
-                    src="/src/images/pic_center02.png"
+                    src="../src/images/pic_center02.png"
                     alt=""
                   />산학연협업센터
                 </li>
                 <li>
-                  <img src="/src/images/pic_center03.png" alt="" />산학교육센터
+                  <img src="../src/images/pic_center03.png" alt="" />산학교육센터
                 </li>
                 <li>
-                  <img src="/src/images/pic_center04.png" alt="" />창업교육센터
+                  <img src="../src/images/pic_center04.png" alt="" />창업교육센터
                 </li>
                 <li>
                   <img
-                    src="/src/images/pic_center05.png"
+                    src="../src/images/pic_center05.png"
                     alt=""
                   />현장실습지원센터
                 </li>
@@ -57,10 +57,10 @@
         </section>
         <section class="infinite-phrase">
           <div class="to-left">
-            <img src="/src/images/text_deco01.png" alt="" />
+            <img src="../src/images/text_deco01.png" alt="" />
           </div>
           <div class="to-right">
-            <img src="/src/images/text_deco02.png" alt="" />
+            <img src="../src/images/text_deco02.png" alt="" />
           </div>
         </section>
         <section class="course">
