--- a/pages/teacher.html
+++ b/pages/teacher.html
@@ -45,9 +45,20 @@
           <div class="application-inner">
             <div class="heading">신청방법</div>
             <div class="application-content-wrap">
-              <div class="application-content"></div>
               <div class="application-content">
-                <img src="/src/images/pic_center.png" alt="" />
+                <iframe
+                  width="100%"
+                  height="100%"
+                  src="https://www.youtube.com/embed/c-Po9-tb23o?si=RPoc3VjBE1lbphAm?autoplay=1&mute=1&controls=0"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+              </div>
+              <div class="application-content">
+                <img src="../src/images/pic_center.png" alt="" />
                 <p>자세한 내용을 알고 싶다면?</p>
                 <a class="btn-link" href=""
                   >클릭해보세요!<i class="bi bi-box-arrow-up-right"></i
@@ -80,7 +91,7 @@
                       </span>
                     </div>
                     <div class="img-box">
-                      <img src="/src/images/story_thumb_1.jpg" alt="" />
+                      <img src="../src/images/story_thumb_1.jpg" alt="" />
                     </div>
                     <div class="text-box">
                       <b>산업체 현장체험 - Microsoft</b>
@@ -99,7 +110,7 @@
                       </span>
                     </div>
                     <div class="img-box">
-                      <img src="/src/images/story_thumb_2.jpg" alt="" />
+                      <img src="../src/images/story_thumb_2.jpg" alt="" />
                     </div>
                     <div class="text-box">
                       <b>2023산학협력페스티벌</b>
@@ -111,10 +122,10 @@
               </div>
               <div class="swiper-navigation">
                 <button class="swiper-button-prev">
-                  <img src="/src/images/icon_slider_prev.png" alt="" />
+                  <img src="../src/images/icon_slider_prev.png" alt="" />
                 </button>
                 <button class="swiper-button-next">
-                  <img src="/src/images/icon_slider_next.png" alt="" />
+                  <img src="../src/images/icon_slider_next.png" alt="" />
                 </button>
               </div>
               <div class="swiper-pagination">
